--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -6,9 +6,54 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <link rel="stylesheet" href="./css/style.css">
-  <script type="text/javascript" src="./js/index.js"></script>
   <title>Ironhack cart</title>
 </head>
 <body>
+  <h1> Ironhack Merchandising Shop </h1>
+  <div class="productWrapper">
+    <ul class="ulContainer">
+      <li class="product-list">
+        <div class="productName">
+          <span> IronBubble-Head </span>
+        </div>
+        <div>
+          $<span class="unitCost"> 25.00 </span>
+        </div>
+        <div class="label">
+          QTY <input class="input" type="text" placeholder="0">
+        </div>
+        <div>
+          $<span class="priceSum">0.00</span>
+        </div>
+        <div>
+          <button class="btn-delete"> Delete </button>
+        </div>
+      </li>
+      <li class="product-list">
+        <div class="productName">
+          <span> IronShirt </span>
+        </div>
+        <div>
+          $<span class="unitCost"> 15.00 </span>
+        </div>
+        <div class="label">
+          QTY <input class="input" type="text" placeholder="0">
+        </div>
+        <div>
+          $<span class="priceSum">0.00</span>
+        </div>
+        <div>
+          <button class="btn-delete"> Delete </button>
+        </div>
+      </li>
+    </ul>
+  </div>
+  <div class="calc-prices-container">
+    <button id="calc-prices-button">Calculate Price</button>
+  </div>
+  <div class='price-total'>
+    <span> Total Price: $</span><span class='totalPrice'> 0  </span>
+  </div>
+  <script type="text/javascript" src="./js/index.js"></script>
 </body>
 </html>
